<?xml version="1.0"?>
<package>
    <name>disp_map</name>
    <version>0.0.1</version>
    <description>This package is used to build disparity map from a simple stereopair of images</description>
    <maintainer email="ed.zhavoronkov@gmail.com">Edgar Zhavoronkov</maintainer>
    <license>TODO</license>
    <url type="website">https://github.com/edgarzhavoronkov/practice</url>
    <author email="ed.zhavoronkov@gmail.com">Edgar Zhavoronkov</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>opencv3</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_filters</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>opencv3</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>message_filters</run_depend>
</package>
